--- a/src/app/components/quick-settings/quick-settings.css
+++ b/src/app/components/quick-settings/quick-settings.css
@@ -1,7 +1,30 @@
 .quick-settings-container {
+	--settings-menu-size: 200px;
+
 	position: relative;
+}
+
+.quick-settings-toggle {
+	padding: var(--space-2);
 }
 
 .settings-menu {
 	position: absolute;
+	width: var(--settings-menu-size);
+	right: 0;
+	margin-top: var(--space-1);
+	padding: var(--space-2);
+	background-color: var(--colour-card);
+	border-radius: var(--radius);
+	box-shadow: 0px 10px 8px -8px rgba(0, 0, 0, 0.1);
+}
+
+.menu-option {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+}
+
+.menu-option.theme {
+	justify-content: space-between;
 }
