--- a/src/assets/styles/styles-light.css
+++ b/src/assets/styles/styles-light.css
@@ -1,7 +1,7 @@
 .light-theme {
 	--colour-primary: #10b981;
 	--colour-background: #ffffff;
-	--colour-foreground: #18181b;
+	--colour-foreground: #535355;
 	--colour-card: #f4f4f5;
 	--colour-card-hover: #e4e4e7;
 	--colour-accent: #f4f4f5;
