--- a/src/app/app.css
+++ b/src/app/app.css
@@ -7,7 +7,12 @@
 
 .pages-render-space {
 	width: 100%;
+	height: 100%;
 	padding: var(--space-3);
+}
+
+::ng-deep .page {
+	height: 90%;
 }
 
 /* Medium devices (tablets, 768px and up) */
