--- a/src/app/components/header/header.css
+++ b/src/app/components/header/header.css
@@ -10,3 +10,20 @@
 	flex-direction: column;
 	justify-content: center;
 }
+
+.profile-button {
+	background-color: var(--colour-card);
+	aspect-ratio: 1 / 1;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border-radius: 100%;
+	padding: var(--space-2);
+}
+
+.actions-container {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	gap: var(--space-2);
+}
