--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -1,5 +1,7 @@
 <header class="header-container">
-	<div class="identity-container">R16a-Cloud</div>
+	<div class="identity-container">
+		<span>R16a Cloud</span>
+	</div>
 
 	<div class="actions-container">
 		<div class="action">
