--- a/src/styles.css
+++ b/src/styles.css
@@ -10,16 +10,38 @@
 	transition: all 122ms linear;
 }
 
+@font-face {
+	font-family: 'Rubik';
+	src: url('/assets/fonts/Rubik-Regular.ttf') format('truetype');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Sixtyfour';
+	src: url('/assets/fonts/Sixtyfour-Regular.ttf') format('truetype');
+	font-style: normal;
+	font-weight: 400;
+	font-style: normal;
+	font-variation-settings:
+		'BLED' 0,
+		'SCAN' 0;
+}
+
 html,
 body {
 	margin: 0 !important;
 	height: 100% !important;
-	font-family: sans-serif;
 	scroll-behavior: smooth;
 
 	background-color: var(--colour-background);
 	color: var(--colour-foreground);
 	font-size: clamp(0.95rem, 2vw, 1rem);
+
+	font-family: 'Rubik', sans-serif;
+	font-optical-sizing: auto;
+	font-weight: 400;
+	font-style: normal;
 }
 
 h1,
