--- a/src/app/components/header/header.css
+++ b/src/app/components/header/header.css
@@ -23,8 +23,10 @@
 }
 
 .actions-container {
+	flex: 1;
 	display: flex;
 	flex-direction: row;
 	align-items: center;
+	justify-content: end;
 	gap: var(--space-2);
 }
