--- a/src/app/components/nav-bar/nav-bar.css
+++ b/src/app/components/nav-bar/nav-bar.css
@@ -6,7 +6,9 @@
 	height: 100%;
 	text-align: center;
 	padding: var(--space-3) var(--space-2);
-	border-top: 1px solid var(--colour-card);
+	background-color: var(--colour-card);
+	border-radius: var(--radius);
+	box-shadow: 0px -10px 8px -8px rgba(0, 0, 0, 0.1);
 }
 
 .nav-option.active {
@@ -15,6 +17,16 @@
 
 .nav-option .nav-option-label {
 	font-size: clamp(0.8rem, 2vw, 0.96rem);
+}
+
+.identity-container {
+	display: none;
+	font-size: 18px;
+	font-family: 'Sixtyfour', sans-serif;
+	background: linear-gradient(to top, var(--colour-primary), var(--colour-foreground));
+	-webkit-background-clip: text;
+	background-clip: text;
+	-webkit-text-fill-color: transparent;
 }
 
 /* Medium devices (tablets, 768px and up) */
@@ -26,6 +38,7 @@
 		border-top: none;
 		background-color: var(--colour-card);
 		box-shadow: 10px 0px 8px -8px rgba(0, 0, 0, 0.1);
+		gap: var(--space-1);
 	}
 
 	.nav-option {
@@ -37,7 +50,13 @@
 		border-radius: var(--radius);
 	}
 
+	.nav-option.active,
 	.nav-option:hover {
 		background-color: var(--colour-card-hover);
+	}
+
+	.identity-container {
+		display: block;
+		padding: var(--space-3) var(--space-2);
 	}
 }
