--- a/src/app/components/nav-bar/nav-bar.html
+++ b/src/app/components/nav-bar/nav-bar.html
@@ -1,6 +1,6 @@
 <nav class="nav-bar-container">
 	<div class="identity-container">
-		<span>R16a Cloud</span>
+		<identity-logo></identity-logo>
 	</div>
 
 	@for (option of navOptions; track option.path) {
