--- a/src/app/pages/login/login.css
+++ b/src/app/pages/login/login.css
@@ -7,12 +7,17 @@
 }
 
 .login-action {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	gap: var(--space-2);
 	text-align: center;
 	margin-bottom: var(--space-4);
 }
 
-.login-title {
-	font-size: 2rem;
+.login-action identity-logo ::ng-deep span {
+	font-size: 25px;
 	font-weight: 600;
 	margin: 0;
 }
@@ -26,7 +31,7 @@
 	display: flex;
 	align-items: center;
 	gap: 0.5rem;
-	padding: 0.75rem 1.5rem;
+	padding: var(--space-2) var(--space-3);
 	border: 1px solid currentColor;
 	border-radius: 0.375rem;
 	background: none;
@@ -37,5 +42,5 @@
 }
 
 .login-btn:hover {
-	opacity: 0.7;
+	color: var(--colour-primary);
 }
