--- a/src/app/pages/login/login.html
+++ b/src/app/pages/login/login.html
@@ -1,12 +1,12 @@
 <div class="login-container page">
 	<div class="login-action">
-		<h1 class="login-title">R16a Cloud</h1>
+		<identity-logo></identity-logo>
 
 		<p class="login-subtitle">Sign in to access your files</p>
 
 		<button class="login-btn" (click)="login()">
 			<i class="bi bi-box-arrow-in-right"></i>
-			Sign in with Authentik
+			Sign in
 		</button>
 	</div>
 </div>
