--- a/src/app/components/quick-settings/quick-settings.css
+++ b/src/app/components/quick-settings/quick-settings.css
@@ -10,9 +10,11 @@
 	right: 0;
 	margin-top: var(--space-1);
 	padding: var(--space-2);
+	font-size: 0.9rem;
 	background-color: var(--colour-card);
 	border-radius: var(--radius);
-	box-shadow: 0px 10px 8px -8px rgba(0, 0, 0, 0.1);
+	box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+	z-index: 10000;
 }
 
 .menu-option {
