--- a/src/assets/styles/styles-dark.css
+++ b/src/assets/styles/styles-dark.css
@@ -6,5 +6,7 @@
 	--colour-card-hover: #27272a;
 	--colour-accent: #27272a;
 	--colour-accent-foreground: #fafafa;
+
 	--colour-folder: #ffbd21;
+	--colour-alert: #ef4444;
 }
