--- a/src/assets/styles/styles-light.css
+++ b/src/assets/styles/styles-light.css
@@ -6,5 +6,7 @@
 	--colour-card-hover: #d1e2e8;
 	--colour-accent: #e0e0e3;
 	--colour-accent-foreground: #18181b;
+
 	--colour-folder: #ffbd21;
+	--colour-alert: #ef4444;
 }
